load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/whslabs/cdk-cardano-node-development
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "cdk-cardano-node-development_lib",
    srcs = ["cdk-cardano-node-development.go"],
    importpath = "github.com/whslabs/cdk-cardano-node-development",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_cdk_go_awscdk_v2//:awscdk",
        "@com_github_aws_aws_cdk_go_awscdk_v2//awsec2",
        "@com_github_aws_constructs_go_constructs_v10//:constructs",
        "@com_github_aws_jsii_runtime_go//:jsii-runtime-go",
    ],
)

go_binary(
    name = "cdk-cardano-node-development",
    embed = [":cdk-cardano-node-development_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cdk-cardano-node-development_test",
    srcs = ["cdk-cardano-node-development_test.go"],
    embed = [":cdk-cardano-node-development_lib"],
)
